<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pagamentodaconta.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/editTextValorConta"
            android:text="@string/valor_da_conta" />
        <EditText
            android:id="@+id/editTextValorConta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/valor_da_conta"
            android:inputType="numberDecimal"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/editTextDinheiro"
            android:text="@string/dinheiro" />
        <EditText
            android:id="@+id/editTextDinheiro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dinheiro"
            android:inputType="numberDecimal"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <!-- LinearLayout inserido para que os botões fiquem
       na posição horizontal -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="limparDados"
                android:text="@string/limpar_valores" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="calcular"
                android:text="@string/calcular" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/valor_da_taxa_de_servi_o"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:id="@+id/textViewValorGorjeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/r_0_00"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/total"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:id="@+id/textViewTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/r_0_00"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/troco"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:id="@+id/textViewTroco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/r_0_00"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>
</ScrollView>
